# poster

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
configuration/: base.yaml  local.yaml
migrations/: 20220616085331_create-tables.sql
scripts/: init_db.sh
src/: auth.rs  configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/config/: mod.rs
src/models/: mod.rs
src/routes/: feed.rs  files.rs  mod.rs  post.rs
