[package]
name = "poster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "poster"

[dependencies]
actix-web = "4"
tokio = "1"
config = "0"
dotenv = "0"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
uuid = { version = "0.8.1", features = ["serde", "v4"]}
chrono = { version = "0.4", features = ["serde"]}
validator = "0"
validator_derive = "0"
sqlx = { version = "0.5", default-features = false, features = ["runtime-actix-rustls", "postgres", "macros", "uuid", "chrono"]}
futures-util = "0"
actix_extract_multipart = "1"
# Using a table-like toml syntax to avoid a super-long line!
#[dependencies.sqlx]
#version = "0.5.7"
#default-features = false
#features = [
#    "runtime-actix-rustls",
#    "macros",
#    "postgres",
#    "uuid",
#    "chrono",
#    "migrate",
#    "offline"
#]