[package]
name = "poster"
version = "0.1.0"
authors = ["Vafa Tarighi <vafatarighi1379@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "poster"

[dependencies]
actix-web = "4.1"
actix-web-httpauth = "0.6"
tokio = "1"
config = "0.11"
dotenv = "0.15"
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
serde_json = "1.0"
secrecy = { version = "0.8", features = ["serde"]}
eyre = "0.6"
color-eyre = "0.6"
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry","env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.5"
uuid = { version = "0.8.1", features = ["serde", "v4"]}
chrono = { version = "0.4", features = ["serde"]}
validator = "0.15"
validator_derive = "0.15"
sqlx = { version = "0.5", default-features = false, features = ["runtime-actix-rustls", "postgres", "macros", "uuid", "chrono"]}
futures-util = "0.3"
actix_extract_multipart = "1.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
colored = "2"

# Using a table-like toml syntax to avoid a super-long line!
#[dependencies.sqlx]
#version = "0.5.7"
#default-features = false
#features = [
#    "runtime-actix-rustls",
#    "macros",
#    "postgres",
#    "uuid",
#    "chrono",
#    "migrate",
#    "offline"
#]